...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                        <connections>
                                            <outlet property="cellImage" destination="UHT-CC-7rY" id="m9i-Vu-M30"/>
                                            <outlet property="dateLabel" destination="zZ7-qv-kLf" id="v4s-uC-ojU"/>
                                            <outlet property="likeButton" destination="sdE-8c-JJO" id="qI9-Lz-Dgp"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="iml-VC-001" id="iLa-Sj-bRa"/>
                                    <outlet property="delegate" destination="iml-VC-001" id="V8N-x6-rWW"/>
...
                            <constraint firstAttribute="top" secondItem="0ZD-Gs-GgP" secondAttribute="top" id="l0f-Ng-QVT"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="jtd-jI-Jp7"/>
                    <navigationItem key="navigationItem" id="rAP-BT-3zf"/>
                    <connections>
                        <outlet property="tableView" destination="0ZD-Gs-GgP" id="Fuw-16-5ad"/>
                        <segue destination="KFW-Y8-gau" kind="presentation" identifier="ShowSingleImage" id="CtI-wu-ivi"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="iml-FR-001" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="919" y="-220"/>
...
                                <viewLayoutGuide key="contentLayoutGuide" id="GaN-LG-s46"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="G4B-u4-C7b"/>
                                <connections>
                                    <outlet property="delegate" destination="KFW-Y8-gau" id="s6X-C7-QQJ"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xaa-Zz-Lw0" accessibilityIdentifier="backButton">
                                <rect key="frame" x="8" y="56" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="ns2-MI-F2W"/>
                                    <constraint firstAttribute="height" constant="48" id="pnU-88-bCm"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
